test/files/pos/t4727.scala
class C[T](x : T = null)

object Test {
  def main(args: Array[String]): Unit = {
    new C[Int]
  }
}
